# Ares

./: .gitattributes  .gitignore  .mcp.json  NOTICE  README.md  ares.bat  ares.ps1  crix.bat  crix.bat - Shortcut.lnk  crix.ps1  launch-crix.bat  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.claude/: settings.local.json
docs/: AGENT.md  AGENTS.md  ARCHITECTURE.md  ARES-AGENTIC-PLAN.md  ARES-CORE-REDESIGN.md  ARES-DEEP-OVERHAUL-ROADMAP.md  ARES-ULTRA-CODING.md  BLUEPRINT.md  CLEANUP.md  CODEX_BUILD_SPEC.md  DEVELOPMENT.md  FORGE-AGENT-MEGA-PROMPT.md  HARNESS_TARGET.md  MEGABUILD-DESIGN.md  PACKAGE_BOUNDARIES.md  PROMPT_PACK.md  PROVIDERS.md  PROVIDER_INTEGRATION.md  REFERENCE_BOUNDARIES.md  REFERENCE_INSIGHTS.md  SELF_UPGRADE_LOOP.md  TYPESCRIPT_ARCHITECTURE.md
examples/: self-upgrade-plan.json
scripts/: clean.mjs  install.ps1  package-tauri-runtime.mjs  publish-vanguard-engine.mjs  send-voice-to-jamara.mts  sync-vanguard.mjs  test-human-cursor.mjs  test-stt.mts  uninstall.ps1  voice-tts.ps1  web-preview-bridge.mjs
tauri/: index.html  living.html  package.json  vite.config.ts
tauri/src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/installer/: register-cli.ps1  unregister-cli.ps1
tauri/src-tauri/src/: main.rs
tests/: ares-anthropic.test.mjs  ares-c1-editloop.test.mjs  ares-channel.test.mjs  ares-consequence.test.mjs  ares-crucible.test.mjs  ares-gauntlet.test.mjs  ares-holotable.test.mjs  ares-leash.test.mjs  ares-rebrand.test.mjs  ares-witness.test.mjs  browser-extension-bridge.test.mjs  browser-recovery.test.mjs  (+130 more)
(+39 files in other folders)
